<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:gravity="center"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/teama"
                    android:textSize="30sp"/>
                <TextView
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/team_a_score"/>

                <Button
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/onepointsa"
                    android:onClick="addonea"/>

                <Button
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/white"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/twopointsa"
                    android:onClick="addtwoa"
                    />
                <Button
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/white"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/threepointa"
                    android:onClick="addthreea"/>

            </LinearLayout>




            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:gravity="center"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/teamb"
                    android:textSize="30sp"/>
                <TextView
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/team_b_score"/>

                <Button
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/onepointsb"
                    android:onClick="addoneb"/>

                <Button
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/twopointsb"
                    android:onClick="addtwob"
                    />
                <Button
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/threepointb"
                    android:onClick="addthreeb"/>



            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:onClick="delete"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="100dp"
            />

        </RelativeLayout>
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
